# Local-Smooth-Interpolating-MonoCurvature

./: .gitignore  LICENSE  README.md
code-gui/: CMakeLists.txt
code-gui/data/: bird.txt  face.txt  guitar.txt  unicorn.txt
code-gui/src/: global.h  global_state.cpp  main.cpp
code-gui/src/controller/: controller.cpp  controller.h  init_controller.cpp  init_controller.h  keyboard_event.cpp  keyboard_event.h  mouse_event.cpp  mouse_event.h
code-gui/src/model/: clothoid_3arcs.cpp  clothoid_3arcs.h  clothoid_curve.h  clothoid_line.cpp  clothoid_line.h  constraints.cpp  constraints.h  control_points.cpp  control_points.h  curve.h  init_model.cpp  init_model.h  interpolator.cpp  interpolator.h  spline.cpp  spline.h  standard_models.cpp  standard_models.h
code-gui/src/utils/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  increase.cpp  increase.h  m_assert.cpp  m_log.cpp  misc.h  polygons.cpp  polygons.h  read_input.h  rotation.cpp  rotation.h  string_process.cpp  string_process.h
code-gui/src/view/: draw.cpp  draw.h  init_view.cpp  init_view.h  view.cpp  view.h  view_circle.cpp  view_circle.h  view_curve.cpp  view_curve.h  view_line.cpp  view_line.h  view_osculating.cpp  view_osculating.h  view_points.cpp  view_points.h  view_tangents.cpp  view_tangents.h
matlab/: clotho_shell.m  clothoid.m  main.m  print_clotho_shell.m
